tests/ui/conflicting_derived_clone.stderr
error[E0119]: conflicting implementations of trait `std::clone::Clone` for type `Foo`
 --> $DIR/conflicting_derived_clone.rs:3:21
  |
3 | #[derive(PureClone, Clone)]
  |          ---------  ^^^^^ conflicting implementation for `Foo`
  |          |
  |          first implementation here
  |
  = note: this error originates in the derive macro `Clone` (in Nightly builds, run with -Z macro-backtrace for more info)
